packages,dependency,navigation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
+
+//    apply plugin: 'androidx.navigation.safeargs.kotlin'
 
 android {
     compileSdk 32
@@ -32,12 +34,68 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    api project(":core")
+    implementation project(":advancedrecyclerview")
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "androidx.core:core-ktx:$core_ktx"
+    implementation "androidx.appcompat:appcompat:$app_compat"
+    implementation "com.google.android.material:material:$material"
+    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout"
+    implementation "androidx.legacy:legacy-support-v4:$legacy_support"
+
+    //RxJava
+    implementation "io.reactivex.rxjava3:rxjava:$rxjava"
+    //RxKotlin
+    implementation "io.reactivex.rxjava3:rxkotlin:$rxkotlin"
+    // RxAndroid
+    implementation "io.reactivex.rxjava3:rxandroid:$rxandroid"
+    //Lifecycle
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine"
+
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    ///retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.google.code.gson:gson:$gson"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+    implementation "com.squareup.okhttp3:logging-interceptor:$logging_intercepto"
+    //RxJava retrofit
+    implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit"
+
+    //Hilt core dependencies Injection
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation 'com.google.dagger:dagger:2.41'
+    kapt 'com.google.dagger:dagger-compiler:2.37'
+
+    //Hilt core dependencies Injection for view model
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_view_model"
+    kapt "androidx.hilt:hilt-compiler:$hilt_view_model"
+//
+//    //Hilt dependencies Injection for WorkManager
+//    implementation "androidx.hilt:hilt-work:$hilt_work"
+//    kapt "androidx.hilt:hilt-compiler:$hilt_work"
+//
+//    //Glide
+//    implementation "com.github.bumptech.glide:glide:$glide"
+//    kapt "com.github.bumptech.glide:compiler:$glide"
+//
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+
+
 }
