--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,58 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.2.2' apply false
-    id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+buildscript {
+    ext.kotlin_version = "1.6.10"
+    ext.nav_version = "2.5.1"
+    ext.hilt_version ="2.41"
+    ext.google_services = "4.3.4"
+    repositories {
+        google()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath "com.android.tools.build:gradle:4.2.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        //Navigation
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        //Hilt
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+
+
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+
+}
+
+ext{
+    core_ktx = "1.3.2"
+    app_compat = "1.2.0"
+    material = "1.2.1"
+    constraint_layout = "2.0.4"
+    legacy_support = "1.0.0"
+    lifecycle_version = "2.2.0"
+    coroutine ="1.3.4"
+    retrofit = "2.9.0"
+    gson = "2.9.0"
+    logging_intercepto = "4.6.0"
+    rxjava = "3.0.1"
+    rxkotlin = "3.0.0"
+    rxandroid = "3.0.0"
+    hilt_view_model = "1.0.0-alpha03"
+    glide = "4.11.0"
+    work_version = "2.7.1"
+    hilt_work = "1.0.0"
+    play_services = "20.0.0"
+    firebase_messaging = "21.0.0"
+    preference_version = "1.1.1"
+    firebase_bom = "26.0.0"
+    fragment_version = "1.2.5"
+    labelspinner = "1.0.0-beta-3"
+    colorpicker ="2.2.3"
+    amazonaws = "2.13.6"
 }
 
 task clean(type: Delete) {
